<resources>
    <string name="app_name">Quiz_Assignment</string>
    <string name="action_getAverage">Get The Average</string>
    <string name="action_select_question">Select the number of Question</string>
    <string name="action_reset_result">Reset the saved Result</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="txt_true">True</string>
    <string name="txt_false">False</string>
    <string name="question1">Tim Hortons is an USA brand</string>
    <string name="question2">George Washington is the first President of the United States</string>
    <string name="question3">BMW is a German company</string>
    <string name="question4">Tokyo is the most populated city on earth</string>
    <string name="question5">Qatar 2022 FIFA was won by Germany</string>
    <string name="question6">Ottawa is the capital of the United States</string>
    <string name="question7">The CN Tower is in Toronto</string>
    <string name="question8">Burj Khalifa is the tallest building in the world</string>


    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_question">Tim Hortons is an USA</string>
    <string name="add_question">Enter the number of question less than</string>
    <string name="action_select_language">Select Language</string>
    <string name="message_average">Your Correct Answers / Total number of Questions=</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="english">English</string>
    <string name="marathi">Marathi</string>
    <string name="invalidNumber">"Invalid input. Please enter a valid number.</string>
    <string name="result">Result</string>
    <string name="your_result">Your Result is : </string>
    <string name="out_of">Out Of </string>
    <string name="save">SAVE</string>
    <string name="ignore">IGNORE</string>
    <string name="enter_question">Enter Question less than 8</string>

</resources>