<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.quiz_assignment.MainActivity">
    <item
        android:id="@+id/action_getAverage"
        android:orderInCategory="100"
        android:title="@string/action_getAverage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_selectQue"
        android:orderInCategory="100"
        android:title="@string/action_select_question"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_resetResult"
        android:orderInCategory="100"
        android:title="@string/action_reset_result"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_selectLanguage"
        android:orderInCategory="100"
        android:title="@string/action_select_language"
        app:showAsAction="never" />
</menu>