<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_question"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:padding="16dp" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:maxLength="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:background="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginHorizontal="5dp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_marginHorizontal="5dp"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>
